# mockingbird

./: .env-sample  .gitignore  README.md  bot.py  pyproject.toml
mockingbird/: decrypto.py  random.py  settings.py
